--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,18 @@ img {
 
 #gallery {
   display: flex;
-  justify-content: center;
   list-style: none;
   padding-left: 0;
+}
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
 }
